feat: add candlestick_chart, coin_price, fear_greed api
